--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -96,20 +96,20 @@ jobs:
           import os
           import json
           import re
-          
+
           from playwright.sync_api import sync_playwright
           from playwright_stealth import stealth_sync
           import cbor2
-          
-          
+
+
           USER_DATA_DIR = '/home/appuser/.config/google-chrome'
           EXECUTABLE_PATH = '/usr/bin/google-chrome-stable'
           base_url = "https://decrypt.day/app/id1489932710"
-          
+
           def cbor_to_list(b: bytes):
               hex_str = b.hex()
               return [int(hex_str[i:i+2], 16) for i in range(0, len(hex_str), 2)]
-          
+
           with sync_playwright() as p:
               print("[-] Setup Chrome")
               
@@ -137,12 +137,12 @@ jobs:
                       get: () => undefined
                   });
               """)
-          
+
               print("[-] Open app info page")
               page = context.new_page()
               stealth_sync(page)
               page.goto(base_url, timeout=60000)
-          
+
               page.wait_for_load_state("domcontentloaded")
               
               if "Just a moment" in page.title() or "Cloudflare" in page.title() or "cf" in page.url:
@@ -152,34 +152,32 @@ jobs:
                       exit(1)
               
               page.wait_for_load_state("domcontentloaded")
-          
-          
+
+
               # fetch download link via JS fetch
               payload = cbor2.dumps({
                   "appId": "cl9se40tq00abdofwqtgov0zs",
-                  "version": "6.1.0",
+                  "version": "6.2.0",
                   "isPremier": cbor2.undefined,
               })
               payload_text = ",".join(map(str,cbor_to_list(payload)))
-          
+
               result = page.evaluate("""
                   async () => {
                       const formData = new FormData();
-                      formData.append('data', '$REQUEST_PAYLOAD$');
-          
+                      formData.append('data', '163,101,97,112,112,73,100,120,25,99,108,57,115,101,52,48,116,113,48,48,97,98,100,111,102,119,113,116,103,111,118,48,122,115,103,118,101,114,115,105,111,110,101,54,46,50,46,48,105,105,115,80,114,101,109,105,101,114,247');
+
                       const resp = await fetch('$BASE_PAGE_URL$?/files', {
                           method: 'POST',
                           body: formData,
                       });
                       return await resp.text();
-                  }"""
-                  .replace("$BASE_PAGE_URL$", base_url)
-                  .replace("$REQUEST_PAYLOAD$", payload_text)
-              )
+                  }
+              """.replace("$BASE_PAGE_URL$", base_url))
               # print(type(result))
               # print(result)
               assert isinstance(result, str), f"Invalid response type: {type(result)}"
-          
+
               try:
                   download_page_req = json.loads(result)
                   assert download_page_req.get("type") == "success", f"Failed when request download path: {download_page_req}"
@@ -202,26 +200,26 @@ jobs:
               # goto download page
               if not free_dl_path:
                   raise ValueError(f"Cannot get download page path. Request: {download_page_req}")
-          
+
               download_page_url = f"{base_url}/dl/{free_dl_path}"
               print(f"[-] Download Page: {download_page_url}")
-          
+
               dl_page = context.new_page()
               stealth_sync(dl_page)
               dl_page.goto(download_page_url, referer=base_url)
-          
+
               btn = dl_page.locator("button.btn-download").filter(has_text="Get download link")
               btn.click()
-             
+            
               print("[-] Trying to fetch download link")
               time.sleep(10)
-          
+
               btn = dl_page.locator("button.btn-download").filter(has_text="Download")
               print("[-] Preparing download")
-          
+
               with dl_page.expect_download() as download_info:
                   btn.click()
-          
+
               download = download_info.value
               semantic_version = r'\d+\.\d+\.\d+'
               match = re.search(semantic_version, download.suggested_filename)
@@ -231,12 +229,12 @@ jobs:
               else:
                   version = f"unknown_{download.suggested_filename}"
                   print(f"[!] Unable find semantic version: {version}")
-          
+
               download_path = os.path.join("/home/appuser/Downloads", f"{version}.ipa")
               download.save_as(download_path)
               print(f"[-] File saved at: {download_path}")
               print("[-] Exited")
-
+              
           EOF
 
           cat <<EOF > /home/appuser/run_bot.sh
