--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -13,7 +13,7 @@ on:
 
 
 jobs:
-  chrome-user:
+  scrape:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Install Environment
         env:
@@ -330,6 +332,7 @@ jobs:
                    echo "⚠️ Found $BASENAME ($SIZE_MB MB), waiting for full file..."
                  else
                    echo "✅ Success: $BASENAME ($SIZE_MB MB)"
+                   7z t $FILE
                    break
                  fi
               fi
@@ -340,10 +343,18 @@ jobs:
           done
           
           echo "Download confirmed."
+          
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: download_ipa
           path: /home/appuser/Downloads/*.ipa
+  
+  call_analyze:
+    needs: scrape
+    uses: ./.github/workflows/analyze.yml
+    with:
+      artifact_name: download_ipa
+      binary_name: UnityFramework
 
