--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -35,7 +35,9 @@ jobs:
       - run: |
           ls -R
           APP_PACKAGE=$(find . -type f \( -name "*.ipa" -o -name "*.apk" \) | head -n 1)
+          VERSION=$(echo $APP_PACKAGE | grep -oE "[0-9]+\.[0-9]+\.[0-9]+")
           echo "APP_PACKAGE=$APP_PACKAGE" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
     
       - name: Setup
         env:
@@ -81,4 +83,3 @@ jobs:
         with:
           name: analysis
           path: /home/workspace
-          retention-days: 5
