--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -31,9 +31,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
-          path: /home/artifact
+          path: artifact
       - run: |
-          ls -R
+          mkdir -p /root/workspace/
+          cp -r artifact/ /root/workspace/
+          
+          ls
           APP_PACKAGE=$(find . -type f \( -name "*.ipa" -o -name "*.apk" \) | head -n 1)
           VERSION=$(echo $APP_PACKAGE | grep -oE "[0-9]+\.[0-9]+\.[0-9]+")
           
@@ -47,8 +50,8 @@ jobs:
           APP_PACKAGE: ${{ env.APP_PACKAGE }}
           BINARY_NAME: ${{ inputs.binary_name }}
         run: |
-          mkdir -p /root/workspace/
-          cd /home/artifact
+          cd /root/workspace/
+          ls
 
           7z x $APP_PACKAGE -o./package
           BINARY_PATH=$(find ./package -name "$BINARY_NAME" -print -quit)
