--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -358,7 +358,7 @@ jobs:
   call_analyze:
     needs: scrape
     if: ${{ inputs.run_analyze == true }}
-    uses: ./.github/workflows/analyze.yml@main
+    uses: ./.github/workflows/analyze.yml
     with:
       artifact_name: download_ipa
       binary_name: UnityFramework
