--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -35,14 +35,15 @@ jobs:
       - run: |
           mkdir -p /root/workspace/
           cp -r artifact/ /root/workspace/
-          
-          ls
+
+          cd artifact
           APP_PACKAGE=$(find . -type f \( -name "*.ipa" -o -name "*.apk" \) | head -n 1)
           VERSION=$(echo $APP_PACKAGE | grep -oE "[0-9]+\.[0-9]+\.[0-9]+")
           
           echo "APP_PACKAGE=$APP_PACKAGE, VERSION=$VERSION"
-        
-          echo "APP_PACKAGE=$APP_PACKAGE" >> $GITHUB_ENV
+          
+          echo "DEBUG: GITHUB_ENV path is [$GITHUB_ENV]"
+          echo "APP_PACKAGE=$APP_PACKAGE" >> "$GITHUB_ENV"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
     
       - name: Setup
