--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -15,10 +15,6 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        # always root
-        shell: sudo bash {0}
 
     steps:
       - name: Checkout
@@ -33,16 +29,15 @@ jobs:
           name: ${{ inputs.artifact_name }}
           path: artifact
       - run: |
-          mkdir -p /root/workspace/
-          cp -r artifact/ /root/workspace/
-
+          mkdir -p /tmp/package
           cd artifact
+          cp -r . /tmp/package
+
           APP_PACKAGE=$(find . -type f \( -name "*.ipa" -o -name "*.apk" \) | head -n 1)
           VERSION=$(echo $APP_PACKAGE | grep -oE "[0-9]+\.[0-9]+\.[0-9]+")
           
           echo "APP_PACKAGE=$APP_PACKAGE, VERSION=$VERSION"
           
-          echo "DEBUG: GITHUB_ENV path is [$GITHUB_ENV]"
           echo "APP_PACKAGE=$APP_PACKAGE" >> "$GITHUB_ENV"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
     
@@ -51,7 +46,7 @@ jobs:
           APP_PACKAGE: ${{ env.APP_PACKAGE }}
           BINARY_NAME: ${{ inputs.binary_name }}
         run: |
-          cd /root/workspace/
+          cd /tmp/package
           ls
 
           7z x $APP_PACKAGE -o./package
