--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Analyze
         env:
           BINARY_NAME: ${{ inputs.binary_name }}
+        shell: sudo bash {0}
         run: |
           # echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           
@@ -73,12 +74,16 @@ jobs:
           echo "Pulling docker..."
           docker pull -q $IMAGE_URL
           echo "Pulling Finished"
-          
+          df -h 
+
           docker run -d --name idap --network none \
             -v /home/runner/workspace:/home/workspace \
             -w /opt/ida $IMAGE_URL \
             tail -f /dev/null
           docker exec idap ./idat -B -L"/dev/stdout" /home/workspace/$BINARY_NAME | tee /home/workspace/output.log
+
+          echo "Finished"
+          chmod -R 777 /home/runner/workspace 
 
       - name: Clean up
         run: |
